usr/src/uts/intel/io/viona/viona_impl.h
@@ -35,7 +35,7 @@
  *
  * Copyright 2015 Pluribus Networks Inc.
  * Copyright 2019 Joyent, Inc.
- * Copyright 2022 Oxide Computer Company
+ * Copyright 2023 Oxide Computer Company
  */
 
 #ifndef	_VIONA_IMPL_H
@@ -159,6 +159,7 @@ struct viona_link {
 	mac_handle_t		l_mh;
 	mac_client_handle_t	l_mch;
 	mac_promisc_handle_t	l_mph;
+	mac_unicast_handle_t	l_muh;
 
 	pollhead_t		l_pollhead;
 
